stylesheet.css
:root {
  --color1: grey;
  --color2: lightgrey;
  --color3: rgb(20, 20, 20);
  --font:  'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: var(--font);

}

.about__me {
  background-color: var(--color2);
  display: flex;
  margin-left:  100px;
  border-top-left-radius: 200px;
  border-bottom-left-radius: 200px;
  position: relative;
  height: 300px;
  /* grid-template-columns: 604px 15px 604px;
  grid-template-rows: 500px; */

}

.bio__text p:nth-of-type(2){
  /* background-color: red; */
  margin: 20px 0;
}

.bio_photo {
  /* grid-column: 1; */
  border-radius: 50%;
  height: 350px;
  width: 350px !important;
  background-image: url(images\Gale King (1).jpg);
  background-size: cover;
  position: absolute;
  top: -25px;
  border: 25px solid var(--color1);
  
}

.bio__text {
  /* grid-column: 3; */
  /* width: 60%; */
  /* margin-left: 50px; */
  padding: 50px;
  position: relative;
  right: 0;
  margin-left: 380px;
}

body {
  background-color: var(--color1);
}

.container {
  display: flex;
  flex-direction: column;
  background-color: var(--color3);
  height: 150px;
  width: 100%;
  margin-bottom: 50px;
}

footer {
  bottom: 0;
  left: 0;
  position: fixed;
  text-align: center;
  width: 100%;
  font-size: 100%;
}
.header{
  display: block;
  height: 100px;
  width: 100%;
  text-align: center;
}

.nav{
  display: block;
}

.nav a {
  color: var(--color2);
  font-weight: bolder;
  font-family: var(--font);
  text-decoration: none;

}

.nav ul{
  list-style: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.nav li{
  text-align: center;
  padding: 0 25px;
  height: 50px;
  line-height: 50px;

}
.nav li:hover{
  /* background-color: rgba(128, 128, 128, 0.479); */
  border-bottom: 3px solid rgb(155, 63, 63) ;
}

p {
  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
}

.page__title {
  
  color: var(--color2);
  font-family: var(--font);

  font-size: 50pt;
  line-height: 100px;

}

